Zapisywanie dokumentu dziala, co prawda jeszcze pozycje nie zapisuja sie prawidłow ale jest już prawie ok. Odpalcie liqubase albo skrypt sql z pliku alter.

--- a/project/project-core/src/main/webapp/resources/components/warehouseInvoiceBottom.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/warehouseInvoiceBottom.xhtml
@@ -43,7 +43,8 @@
 
 			<div class="col-lg-3 pull-right">
 				<label>Razem</label>
-				<p:inputText styleClass="form-control" disabled="true" value="#{cc.attrs.controller.sourceObject.total}" >
+				<p:inputText styleClass="form-control text-right" disabled="true"
+							 value="#{cc.attrs.controller.sourceObject.total}">
 					<f:convertNumber type="number" groupingUsed="true" minFractionDigits="2" pattern="#0.00"/>
 				</p:inputText>
 			</div>
