--- a/project/project-core/src/main/webapp/resources/components/invoiceGoodList.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/invoiceGoodList.xhtml
@@ -32,7 +32,7 @@
 						<p:outputLabel value="#{good.good.prices.priceMagGross}"/>
 					</p:column>
 					<p:column headerText="Watość" style="width: 12%;">
-						<p:outputLabel value="TODO" />
+						<p:outputLabel value="#{good.good.prices.priceMagGross * good.quantity}"/>
 					</p:column>
 				</p:dataTable>
 			</div>
