--- a/project/project-core/src/main/webapp/resources/components/goodChooser.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/goodChooser.xhtml
@@ -24,7 +24,7 @@
 				</p:inputText>
 			</div>
 			<div class="col-xs-4 pull-right" style="top: 25px;">
-				<p:commandLink styleClass="btn btn-primary pull-right" type="button"
+				<p:commandLink styleClass="btn btn-primary pull-right" type="button" ajax="true"
 							   value="Wybierz" update="@form" action="#{cc.attrs.action}"/>
 			</div>
 		</div>
