--- a/project/project-core/src/main/webapp/resources/components/invoiceBottom.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/invoiceBottom.xhtml
@@ -4,7 +4,8 @@
 	xmlns:composite="http://java.sun.com/jsf/composite"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:cc="http://java.sun.com/jsf/composite/components">
 
 	<composite:interface>
         <composite:attribute name="controller"/>
@@ -13,24 +14,9 @@
 	<composite:implementation>
 		<div class="row">
 			<div class="col-sm-4 col-lg-3 invoice-col">
-				<div class="small-box bg-blue">
-					<div class="inner">
-						<h3>Sprzedawca</h3>
-						<address>
-							<strong>#{constantElements.userData.name}</strong><br/>
-							#{constantElements.userData.address.address}<br />
-							#{constantElements.userData.address.postalCode.city},
-							#{constantElements.userData.address.postalCode.code}<br />
-							NIP: #{constantElements.userData.nip}<br />
-							Email: #{constantElements.userData.email}
-						</address>
-					</div>
-					<a href="#" class="small-box-footer"> More info <i
-							class="fa fa-arrow-circle-right"/>
-					</a>
-				</div>
+				<cc:contractor value="#{constantElements.userData}"
+							   name="Sprzedawca" disabled="true" />
 			</div>
-
 			<div class="col-lg-4">
 				<label>Wydał</label>
 				<p:inputTextarea styleClass="form-control" style="height: 83px;"
