--- a/project/project-core/src/main/webapp/resources/components/invoiceBottom.xhtml
+++ b/project/project-core/src/main/webapp/resources/components/invoiceBottom.xhtml
@@ -9,13 +9,14 @@
 
 	<composite:interface>
         <composite:attribute name="controller"/>
+		<composite:attribute name="title"/>
 	</composite:interface>
 
 	<composite:implementation>
 		<div class="row">
 			<div class="col-sm-4 col-lg-3 invoice-col">
 				<cc:contractor value="#{constantElements.userData}"
-							   name="Sprzedawca" disabled="true" />
+							   name="#{cc.attrs.title}" disabled="true" />
 			</div>
 			<div class="col-lg-4">
 				<label>Wydał</label>
